# ext_lsst

./: README.md  init_stage1.bash
EXT_PF1_dm4lsst/: .gitignore  CMakeLists.txt  readme.md
EXT_PF1_dm4lsst/XMLproduct/: CMakeLists.txt
EXT_PF1_dm4lsst/XMLproduct/python/XMLproduct/: ExtDmUtils.py  create_xml.py  dmUtils.py  script_createXML.py
EXT_PF1_dm4lsst/XMLproduct/tests/python/: create_xml_test.py
at_ccin2p3/: butler4euclid.py  create_jobs_ingest_eas.py  create_jobs_stage1_1step.py  eas.py  file_conf.py  process_image_lsst.py  readme.md  script_euclid_step.py  script_ingest_eas.py  script_lsst_step.py  stack_for_stage1.py
at_ccin2p3/old_debug/: convert_cat.py  convert_cat.sh  create_jobs_stage1_2step.py  list_cat_simu.py  list_raw_lsst.py  script_query_env.sh  webdav.py
at_ccin2p3/tests/: exa.txt  pars4test.txt  test_EasTools.py  test_FileConfLSSTProcessing.py  test_ManageSetButlers.py  test_process_image_lsst.py
check_tools/: astrometry.py  catalog.py  readme.md  sc8.py
convert_tools/: __init__.py  lsst2euc.py  patch_pixscal.py  ref_catalog_euclid2lsst.py  sip2tpv.py  snippets.py
singularity/: script_step_lsst.bash
